boinc (7.6.2+dfsg-1exp1) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * New upstream release, patch refresh.
  * Add nvidia-modprobe as dependency (LP: #1400021)
  * d/control.in according to gcc, virtual package libstdc++-dev
    is enough to provide libstdc++.a.
  * d/patches/coproc.patch, fix build failure.
  * Make boinc Multi-Arch: same
  * Drop patches now that 7.5 is a tag from master
    - debian/patches/coproc.patch
    - debian/patches/fix-typo.patch
    - debian/patches/server_status_php.patch
  [ Vincent Danjean ]
  * fix gpu stuff (Closes: #763655)
  [ Michael Tautschnig ]
  * d/p/envargs.patch, fix inconsistencies spot with research compiler.
    (Closes: #747964)

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Mon, 01 Jun 2015 10:29:55 +0200

boinc (7.4.23+dfsg-2exp1) experimental; urgency=medium

  * Upload to experimental, with the boinc-server-* packages.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 10 Dec 2014 13:27:40 +0100

boinc (7.4.23+dfsg-2) unstable; urgency=low

  * Upload to unstable.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 10 Dec 2014 13:26:02 +0100

boinc (7.4.23+dfsg-1exp3) experimental; urgency=medium

  [ Nelson A. de Oliveira ]
  * Fix wrong chown binary path (Closes: #768429).

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 07 Nov 2014 12:30:50 +0100

boinc (7.4.23+dfsg-1exp2) experimental; urgency=medium

  * Fix other dependencies on dbg packages.
  * Reorder debian patches, drop useless and old ones.
  * Add pre-depends on shared multiarch packages.
  * Add service file, tweaked from the fedora one.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Sat, 18 Oct 2014 14:34:41 +0200

boinc (7.4.23+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental, with the boinc-server-* packages.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 17 Oct 2014 17:15:26 +0200
